plugins {
    id 'java'
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.sparkjava:spark-core:2.9.3'
    implementation 'com.google.code.gson:gson:2.8.8'
    implementation 'org.mongodb:mongodb-driver-sync:4.3.2'
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'org.slf4j:slf4j-api:2.0.0'

    runtimeOnly 'ch.qos.logback:logback-classic:1.4.0'
}

processResources {
    from('movies-v2.json.gz')
}

application {
    mainClass.set('movies.Server')
    applicationDefaultJvmArgs = ['-Xmx3g', '-Xms3g']
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
